web-infras/parser/tests/fixtures/esprima/ES6/generator/incomplete-yield-delegate/output.txt
[SyntaxError]: yield deletegate must be followed by assignment expression (1,23)
1|(function*() { yield* })
 |                     ^
